--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,8 @@ jobs:
     run: make Hello.java
   - name: run
     run: java Hello
-  - uses: actions/upload-artifact@master
+  - name: build artifact
+    uses: actions/upload-artifact@master
     with:
      # Artifact name
      name: Hello
