--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
     uses: actions/upload-artifact@master
     with:
      # Artifact name
-     name: Hello
+     name: Hello-artifact
      # what to upload
      path: gitactions
