--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,5 +43,9 @@ jobs:
        username: nikharmehta
        password: Mann@2018
        repository: docker_1
+       path: nikharmehta/docker_1
+       target: build
+       always_pull: docker pull jenkins
+       push: true
        
  
