--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,16 @@ jobs:
     with:
        username: nikharmehta
        password: ${{ secrets.Docker_Hub_Password }}
+       
+  - name: Sum
+    with:
+     name: input
+     inputs.x: 10
+     inputs.y: 20
+     outputs.z: x+y
+     run: echo $z
+         
+   
 
      
  
