--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,8 +57,19 @@ jobs:
     run: echo 'The selected color is' $SELECTED_COLOR
       
 # Use of functions
-  - name: functions
+  - name: contain function
     if: ${{ contains('Hello world', 'llo') }}
     run: echo 'llo is a part of Hello World'
+    
+  - name: contain function
+    if: ${{ startsWith('Hello world', 'He') }}
+    run: echo 'Hello World starts with He'
+    
+  - name: contain function
+    if: ${{ endsWith('Hello world', 'ld') }}
+    run: echo 'Hello World ends with ld'
      
- 
+  - name: contain function
+    run: echo '${{ format('{{Hello {0} {1} {2}!}}', 'Nikhar', 'M', 'Mehta') }}'
+   
+    
