--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
 # Conditional statements
   - name: SAST scan succeeded
     if: success()
+    
 # Use of secrets
     uses: Azure/docker-login@v1
     with:
@@ -70,6 +71,6 @@ jobs:
     run: echo 'Hello World ends with ld'
      
   - name: contain function
-    run: echo '${{ format('{{Hello {0} {1} {2}!}}', 'Nikhar', 'M', 'Mehta') }}'
+    run: echo '${{ format('{{Hello {0} {1} {2}!}}', 'Nikhar', 'Ajith', 'Sneha') }}'
    
     
