--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,22 +1,13 @@
-name: Action yml file
-on: [push]
-
+on: push
 jobs:
-  example:
-    runs-on: [ubuntu-latest]
-    env:
-      input: environment variable
-    steps:
-    # use env variable as input
-    - uses: actions/hello-world-javascript-action@master
-      with:
-          who-to-greet: ${{ env.input }}
-
-    # use input from the github context[https://help.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#github-context](https://help.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#github-context) 
-    - uses: actions/hello-world-javascript-action@master
-      with:
-          who-to-greet: ${{ github.repository}}
-
-    - uses: actions/hello-world-javascript-action@master
-      with:
-          who-to-greet: ${{ github.ref }}
+   deployment:
+     runs-on: ubuntu-latest
+     steps:
+      - uses: actions/checkout@v1
+      - name: HTTP Request Action
+        uses: fjogeleit/http-request-action@v1.3.1
+      - with:
+         url: 'https://hub.docker.com/'
+         method: 'GET'
+         username: 'nikhae'
+         password: ${{ secrets.Docker_Hub_Password }}
