--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,10 +4,11 @@ jobs:
      runs-on: ubuntu-latest
      steps:
       - uses: actions/checkout@v1
+        
       - name: HTTP Request Action
         uses: fjogeleit/http-request-action@v1.3.1
-      - with:
+        with:
          url: 'https://hub.docker.com/'
          method: 'GET'
-         username: 'nikhae'
+         username: 'nikhar'
          password: ${{ secrets.Docker_Hub_Password }}
