--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,5 +6,5 @@ jobs:
       - name: CURL-ACTION
         uses: enflo/curl-action@v1.2
         with:
-        # curl arguments
+        # curl argument
          curl: 'http://13.89.226.45:9090/stargazer/api/applications/get -H "Content-Type: application/json" -H “Authorization: Bearer ${{ secrets.Bearertoken }}”'
