--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,7 +1,7 @@
 on: push
 jobs:
    deployment:
-     runs-on: self-hosted
+     runs-on: ubuntu-latest
      steps:
       - name: CURL-ACTION
         uses: enflo/curl-action@v1.2
